# faceblur

./: .cursorrules  .gitignore  .gitmodules  FACE_DETECTION_PERFORMANCE_ANALYSIS.md  README.md  cep.config.ts  package.json  requirements.txt  tailwind.config.js  vite.config.ts
.cursor/rules/: face-pipeline.mdc
.github/workflows/: main.yml
cpp/: CMakeLists.txt
cpp/models/: scrfd_2.5g_kps_640x640.nupkg
cpp/models/scrfd_2.5g_kps_640x640/: .signature.p7s  FaceAiSharp.Models.Scrfd.2dot5g_kps_640x640.nuspec  [Content_Types].xml
cpp/models/scrfd_2.5g_kps_640x640/_rels/: .rels
cpp/src/: gmc.cpp  gmc.hpp  hungarian.cpp  hungarian.hpp  kalman_filter.cpp  kalman_filter.hpp  main.cpp  ocsort.cpp  ocsort.hpp  pipeline.cpp  pipeline.hpp  reid.cpp  reid.hpp  scrfd.cpp  scrfd.hpp  stb_impl.cpp  transform.hpp
scripts/: detect_faces.py  test_face_pipeline.py
src/js/lib/utils/: faceDetection.ts  prfpset.ts
src/js/lib/utils/mogrt/: archive.ts  builder.ts  config.ts  encoder.ts  file-selector.ts  index.ts  parser.ts  types.ts
src/js/main/: index-react.tsx  index.html  main.tsx
src/jsx/: index.ts
src/jsx/ppro/: ppro.ts  tsconfig.json  types.ts
src/jsx/ppro/effects/: components.ts  effects.ts
src/jsx/ppro/utils/: audio.ts  logger.ts  metadata.ts  mogrt.ts  projectItem.ts  qe.ts  sequence.ts  time.ts
src/jsx/utils/: EffectPropertyMapper.ts
src/scripts/: check_uniface_setup.py  detect_faces.py
